--- a/project-bolt-sb1-eqyatgyk final v2 text to img/project/vercel.json
+++ b/project-bolt-sb1-eqyatgyk final v2 text to img/project/vercel.json
@@ -7,6 +7,12 @@
       "runtime": "nodejs18.x"
     }
   },
+  "builds": [
+    {
+      "src": "src/api/**/*.ts",
+      "use": "@vercel/node@3.0.0"
+    }
+  ],
   "headers": [
     {
       "source": "/(.*)",
@@ -26,15 +32,6 @@
         {
           "key": "Strict-Transport-Security",
           "value": "max-age=31536000; includeSubDomains"
-        }
-      ]
-    },
-    {
-      "source": "/static/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
         }
       ]
     }
